--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,10 @@
+
+/*Verificar quais elementos o tab pega
+object:focus{
+  border: 2px solid red;
+}
+*/
+
 :root {
   --fonte: "Montserrat", 'Krona One', 'Open Sans', sans-serif;
   --gradiente: linear-gradient(180deg, #E8F5C8 0%, rgb(255, 255, 255) 80%);
@@ -25,4 +32,8 @@ button {
 
 body {
   font-family: var(--fonte);
+}
+
+fieldset{
+  border: none;
 }
